# tekkneeca-legacy

./: .gitignore  .gitmodules  LICENSE  README.md
moveit_test/: CMakeLists.txt  package.xml
moveit_test/src/: moveit_test.cpp
open3d_conversions/open3d_conversions/: open3d_conversions.py
paradocs_control/: CMakeLists.txt  package.xml
paradocs_control/config/: eih_cam1.calib  eih_cam1_calib4-9.calib  eih_cam1_ori.calib  eih_cam1_param.calib
paradocs_control/launch/: calibrate.launch.py  camera_calib.launch.py  hello_moveit.launch.py  lbr_bringup_real_calibrated.launch.py  rs_calibrated.launch.py  rs_launch.py  single.launch.py  static_obstacles.launch.py  tekkneeca.launch.py  tekkneeca_halfsim.launch.py  tekkneeca_sim.launch.py
paradocs_control/scripts/: aruco_pose_transformer.py  drill_pose_transformer.py  forward_kinematics.py  moveit_goal_publisher.py  open3d_pipeline.py  playground.py  point_cloud_saver.py  subscriber_member_function.py
paradocs_control/src/: hello_moveit.cpp  static_obstacles.cpp  subscriber_not_composable.cpp
paradocs_controls/: package.xml  setup.cfg  setup.py
paradocs_controls/launch/: calibrate.launch.py  camera_calib.launch.py  single.launch.py
paradocs_controls/paradocs_controls/: ee.py  moveit.cpp
serialcomm/: package.xml  setup.cfg  setup.py
serialcomm/serialcomm/: testsub.py  write_to_serial.py
